Adding simple lexer + cmake config

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,5 +2,8 @@ FLEX_TARGET(SimpleLexer simpleLexer.lex ${CMAKE_CURRENT_BINARY_DIR}/simpleLexer.
 
 include_directories(${CMAKE_CURRENT_BINARY_DIR})
 
-add_executable(${PROJECT_NAME} main.cpp ${FLEX_SimpleLexer_OUTPUTS})
+add_library(Driver driver.cpp driver.hpp)
+
+add_executable(${PROJECT_NAME} main.cpp ${FLEX_SimpleLexer_OUTPUTS} ${Driver})
+
 target_link_libraries(${PROJECT_NAME} ${FLEX_LIBRARIES})
