--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,6 @@ set(CMAKE_CXX_STANDARD_REQUIRED True)
 find_package(FLEX REQUIRED)
 
 add_subdirectory(src)
-add_executable(${PROJECT_NAME} main.cpp ${FLEX_SimpleLexer_OUTPUTS})
+add_executable(${PROJECT_NAME} main.cpp)
 
-target_link_libraries(${PROJECT_NAME} ${FLEX_LIBRARIES})
+target_link_libraries(${PROJECT_NAME} Tokens Lexer)
