--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,3 +1,8 @@
-FLEX_TARGET(SimpleLexer simpleLexer.lex ${CMAKE_CURRENT_BINARY_DIR}/simpleLexer.cpp COMPILE_FLAGS --header-file=${CMAKE_CURRENT_BINARY_DIR}/simpleLexer.hpp)
+FLEX_TARGET(Lexer lexer.lex ${CMAKE_CURRENT_BINARY_DIR}/lexer.cpp COMPILE_FLAGS)
 
 include_directories(${CMAKE_CURRENT_BINARY_DIR})
+
+add_library(Tokens INTERFACE)
+add_library(Lexer ${FLEX_Lexer_OUTPUTS})
+target_include_directories(Lexer PUBLIC ${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
+target_sources(Tokens INTERFACE tokens.hpp)
