--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -67,6 +67,12 @@
 		"stdexcept": "cpp",
 		"streambuf": "cpp",
 		"typeinfo": "cpp",
-		"map": "cpp"
+		"map": "cpp",
+		"cstring": "cpp",
+		"ctime": "cpp",
+		"fstream": "cpp",
+		"iomanip": "cpp",
+		"sstream": "cpp",
+		"cinttypes": "cpp"
 	}
 }
