Setting up parser + AST
Co-authored-by: cedhons <cedhons@users.noreply.github.com>

--- a/vsopcompiler/Makefile
+++ b/vsopcompiler/Makefile
@@ -7,8 +7,8 @@ BISONFLAGS 		= -d
 EXEC			= vsopc
 
 SRC				= main.cpp \
-				  scanner.cpp \
-				  tokens.cpp \
+				  driver.cpp \
+				  parser.cpp \
 				  lexer.cpp
 
 OBJ	  			= $(SRC:.cpp=.o)
@@ -16,13 +16,22 @@ OBJ	  			= $(SRC:.cpp=.o)
 
 all: $(EXEC)
 
-main.o: scanner.hpp tokens.hpp
+main.o: driver.hpp parser.hpp
+
+driver.o: driver.hpp parser.hpp
+
+parser.o: driver.hpp parser.hpp
+
+lexer.o: driver.hpp parser.hpp
 
 $(EXEC): $(OBJ)
 	$(CXX) -o $@ $(LDFLAGS) $(OBJ)
 
-lexer.o: scanner.cpp scanner.hpp tokens.hpp
+parser.cpp: parser.y
+	bison $(BISONFLAGS) -o parser.cpp $^
 
+parser.hpp: parser.y
+	bison $(BISONFLAGS) -o parser.cpp $^
 
 lexer.cpp: lexer.lex
 	flex $(LEXFLAGS) -o lexer.cpp $^
@@ -32,6 +41,7 @@ clean:
 	@rm -f $(EXEC)
 	@rm -f $(OBJ)
 	@rm -f lexer.cpp
+	@rm -f parser.cpp parser.hpp location.hh
 
 install-tools:
 	@echo "Nothing to install."
