--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -18,5 +18,16 @@
 	// "customizations": {},
 
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
-	"remoteUser": "vagrant"
+	"remoteUser": "vagrant",
+	"customizations": {
+		"vscode": {
+			"extensions": [
+				"ms-vscode.cpptools",
+				"ms-vscode.cpptools-extension-pack",
+				"ms-vsliveshare.vsliveshare",
+				"ms-vscode.makefile-tools",
+				"daohong-emilio.yash"
+			]
+		}
+	}
 }
