Small modifications, still need to fix the visitor
Co-authored-by: cedhons <cedhons@users.noreply.github.com>

--- a/vsopcompiler/Makefile
+++ b/vsopcompiler/Makefile
@@ -26,7 +26,7 @@ parser.o: driver.hpp parser.hpp AST/nodes.hpp
 
 lexer.o: driver.hpp parser.hpp
 
-AST/nodes.o: AST/visitable.hpp AST/visitor.hpp AST/nodes.hpp
+AST/nodes.o: AST/visitor.hpp AST/nodes.hpp
 
 AST/type_checker.o: AST/semantic_exception.hpp AST/nodes.hpp AST/visitor.hpp AST/type_checker.hpp
 
